--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: postgres:9.6.14
     hostname: postgresql
     environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
       POSTGRES_DB: demo
     ports:
       - 5432:5432
